--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -17,6 +17,8 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^19.1.1",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.9.4",
+    "sweetalert2": "^11.26.3",
     "tailwindcss": "^4.1.15"
   },
   "devDependencies": {
